# mega-mailer-src

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  build.fish  compose-dev.yml  config.yaml.sample
docker/: builder.docker  mail_checker.docker  telegram_bot.docker  web_server.docker
src/: cfg.rs  main.rs
src/bot/: bot.rs  cfg.rs  handlers.rs  main.rs  mod.rs
src/broker/: cfg.rs  main.rs
src/db/: pg_init.sql
src/lib/: cfg.rs  ctrlc_handler.rs  heartbeat.rs  lib.rs  sentry.rs
src/lib/macros/: retry.rs
src/lib/queues/: mod.rs
src/lib/sessions/: mod.rs  session_manager.rs  telegram_auth.rs
src/lib/storage/: attach_request.rs  cipher.rs  login_request.rs  mail_account.rs  mod.rs  storage.rs  user.rs
src/lib/types/: errors.rs  importance_checker.rs  message_task.rs  mod.rs
src/mail_checker/: cfg.rs  checker.rs  main.rs  mod.rs
src/storage/: attach_request.rs  cipher.rs  login_request.rs  mail_account.rs  mod.rs  storage.rs  user.rs
src/types/: errors.rs  mod.rs
src/web/: account_handlers.rs  auth_handlers.rs  cfg.rs  healthcheck_handlers.rs  heartbeat_handlers.rs  importance_settings_handlers.rs  main.rs  mod.rs  notify_settings_handlers.rs  server.rs  session_manager.rs
