[package]
name = "mega_mailer"
version = "0.1.0"
authors = ["Ilya Volchenkov <ivolchenkov@megaputer.ru>"]
edition = "2021"

[dependencies]
axum = "=0.6.20"
cookie = "=0.18.0"
tower-cookies = "=0.9.0"
tower-http = { version = "=0.4.4", features = ["fs"] }
jwt = "=0.16.0"
hmac = "=0.12.1"
sha2 = "=0.10.8"
serde = "=1.0.190"
serde_json = "=1.0.108"
serde_cbor = "=0.11.2"
tokio = { version = "=1.33.0", features = ["full"]}
tokio-util = "=0.7.10"
tokio-stream = "=0.1.14"
teloxide-core = { version = "=0.9.1", default-features = false, features = ["rustls"] }
teloxide = { version = "=0.12.2", default-features = false, features = ["rustls", "macros", "ctrlc_handler"] }
futures = "=0.3.29"
bb8 = "=0.8.1"
bb8-redis = "=0.13.1"
bb8-postgres = "=0.8.1"
postgres_array = "=0.11.1"
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
rand = "=0.8.5"
regex = "=1.10.2"
lazy_static = "=1.4.0"
cbc = "=0.1.2"
aes = "=0.8.3"
thiserror = "=1.0.50"
imap = { version = "=2.4.1", default-features = false }
rustls-connector = { version = "=0.18.3" }
clokwerk = "=0.4.0"
rustyknife = "=0.2.11"
reqwest = { version = "=0.11.22", default-features = false, features = ["rustls-tls"] }
uuid = "=1.5.0"
ctrlc = "=3.4.1"
chrono = { version = "=0.4.31", features = ["serde"] }
sentry = { version = "=0.31.7", default-features = false, features = ["backtrace", "contexts", "panic", "anyhow", "debug-images", "reqwest", "rustls", "tracing"] }
anyhow = "=1.0.75"
sentry-anyhow = "=0.31.7"
tracing = "=0.1.40"
tracing-subscriber = "=0.3.17"
querystring = "=1.1.0"
urlencoding = "=2.1.3"
ring = "=0.17.5"
hex = "=0.4.3"
rust-embed = "=8.0.0"

[lib]
name = "common"
path = "src/lib/lib.rs"

[[bin]]
name = "web_server"
path = "src/web/main.rs"

[[bin]]
name = "mail_checker"
path = "src/mail_checker/main.rs"

[[bin]]
name = "telegram_bot"
path = "src/bot/main.rs"

[profile.release]
debug = true